components/apps/monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: &host prometheus.${CLUSTER_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port: 
              number: 8080
        pathType: Prefix
        path: "/"
  tls:
  - hosts:
    - *host
    secretName: prometheus-certificate-tls
